[package]
name = "codecrafters-grep"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1"                                    # error handling
bytes = "1"                                     # helps manage buffers
thiserror = "2"                                 # error handling
clap = { version = "4", features = ["derive"] } # command line argument parsing
